@@ -56,6 +56,8 @@ PHP                                                                        NEWS
 - Reflection:
   . Fixed bug GH-10623 (Reflection::getClosureUsedVariables opcode fix with
     variadic arguments). (nielsdos)
+  . Fix Segfault when using ReflectionFiber suspended by an internal function.
+    (danog)
 
 - Session:
   . Fixed ps_files_cleanup_dir() on failure code paths with -1 instead of 0 as
